# evplanbackend

./: .env  Dockerfile  README.md  Spacefile  pyproject.toml  requirements.txt  run.sh
api/: constants.py  database.py  dependencies.py  main.py
api/models/: models.py
api/models/schemas/: algorithm.py  element.py  models.py  restriction.py  rule.py  token_data.py
api/models/schemas/auth/: update_password.py  update_role.py  user.py
api/routers/: algorithms.py  auth.py  input_layers.py  map.py  values.py  websocket.py
api/services/: algorithms.py  auth.py  input_layers.py  map.py  websocket.py
